# socar-auto-admin

./: README.md  pyproject.toml
src/auto_asset/accident/pages/: accident_page.py  login_page.py
src/socar_auto_admin/: app.py
src/socar_auto_admin/accident/: __init__.py  accident_registration.py  views.py
src/socar_auto_admin/accident/pages/: accident_page.py  login_page.py
src/socar_auto_admin/accident/templates/accident/: registration.html
src/socar_auto_admin/home/templates/: home.html
src/socar_auto_admin/templates/: index.html
src/socar_auto_admin/utils/: automation.py  wait_utils.py
