[project]
name = "socar-auto-admin"
version = "0.1.0"
description = ""
authors = [
    {name = "socar-sio",email = "sio@socar.kr"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "selenium (>=4.30.0,<5.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "setuptools (>=78.1.0,<79.0.0)"
]

[tool.poetry]
packages = [{include = "socar_auto_admin", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
